--- a/miniprogram-35/pages/shopcar/shopcar.wxml
+++ b/miniprogram-35/pages/shopcar/shopcar.wxml
@@ -22,7 +22,9 @@
         </view>  
       </view>
     </view>
+
   </view>
+  <!-- <view class="line"></view> -->
 </view>
 <view class="dibu">
   <view class="dibu_tb">
