--- a/miniprogram-35/pages/shopcar/shopcar.wxss
+++ b/miniprogram-35/pages/shopcar/shopcar.wxss
@@ -9,12 +9,15 @@ page{
   margin-left: 10px;
   margin-top: 10px;
   margin-right: 10px;
+  
 }
 .car_box{
   background-color: white;
 
   display: flex;
   align-items: center;
+
+  border-bottom: 1px solid #ccc; /* 设置边框样式 */
 }
 .tb_tu{
   margin-left: 20px;
@@ -44,6 +47,12 @@ page{
   color: rgb(0, 69, 55);
   display: flex;
 }
+.line {
+  border-bottom: 1px solid #ccc; /* 设置边框样式 */
+  width: 100%; /* 设置横线长度为100% */
+  display: block; /* 将view标签转换为块级元素 */
+}
+
 /*主容器*/  
 .stepper {
   width: 74px;  
